--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -48,12 +48,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ImageProcessorTests.cs" />
+    <Compile Include="MainFormTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BatchResize.csproj">
@@ -67,12 +63,6 @@
   <ItemGroup>
     <Content Include="Resources\Test1.png" />
     <Content Include="Resources\Test2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
