Dark mode theme just because.

--- a/App.config
+++ b/App.config
@@ -1,6 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="BatchResize.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="BatchResize.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+    <userSettings>
+        <BatchResize.Properties.Settings>
+            <setting name="DarkModeOn" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </BatchResize.Properties.Settings>
+    </userSettings>
+    <applicationSettings>
+        <BatchResize.Properties.Settings>
+            <setting name="DarkModeForeColor" serializeAs="String">
+                <value>230, 230, 230</value>
+            </setting>
+            <setting name="DarkModeBackColor" serializeAs="String">
+                <value>30, 30, 30</value>
+            </setting>
+        </BatchResize.Properties.Settings>
+    </applicationSettings>
 </configuration>
