Added DarkMode variables into settings.

--- a/App.config
+++ b/App.config
@@ -26,6 +26,9 @@
             <setting name="DarkModeBackColor" serializeAs="String">
                 <value>30, 30, 30</value>
             </setting>
+            <setting name="DarkModeToggleKeys" serializeAs="String">
+                <value>Ctrl+Shift+D</value>
+            </setting>
         </BatchResize.Properties.Settings>
     </applicationSettings>
 </configuration>
